2005-07-27  Sebastien Bacher  <seb128@debian.org>

	* NEWS:
	* configure.in: updated for 2.11.90.

2005-07-27  Mark McLoughlin  <mark@skynet.ie>

	* configure.in, autogen.sh: revert what looks like
	accidentally committed changes from svu.

2005-07-20  Rodrigo Moya <rodrigo@novell.com>

	* control-center.spec.in: require either xscreensaver or gnome-screensaver.

	* schemas/apps_gnome_settings_daemon_screensaver.schemas.in: don't
	mention explicitly xscreensaver, but "generic screen saver".
	
2005-07-19  Mark McLoughlin  <mark@skynet.ie>

	See http://mail.gnome.org/archives/desktop-devel-list/2005-July/msg00341.html

	* capplets/wm-properties/*: remove old crufty code.

2005-07-17  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in: use pkg-config to check for xcursor

2005-07-15  Mark McLoughlin  <mark@skynet.ie>

	See bug #310513

	* schemas/desktop_gnome_peripherals_keyboard_xkb.schemas.in:
	Deprecate the overrideSettings key and make the keys unset
	by default (we want to use the XKB settings by default)

2005-07-13  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update to 2.11.7.

==================== 2.11.6 ===================	

2005-07-13  Sebastien Bacher  <seb128@debian.org>

	* NEWS: updated for 2.11.6.

2005-07-08  Sebastien Bacher  <seb128@debian.org>

	* configure.in: updated the libxft requirement to 2.1.7, 
	Christian Lohmaier <cloph@cup.uni-muenchen.de> (Closes: #309558).

2005-07-08  Sebastien Bacher  <seb128@debian.org>

	* NEWS: updated.

2005-07-07  Sebastien Bacher  <seb128@debian.org>

	* schemas/Makefile.am: fix a typo with a .schemas name, 
	Jan Schmidt <thaytan@mad.scientist.com> (Closes: #307388).

2005-07-05  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update to 2.11.6.

==================== 2.11.5 ===================
	
2005-07-05  Sebastien Bacher  <seb128@debian.org>

	* configure.in: build the new capplet by default.

2005-06-22  Diego Gonzalez <diego@pemas.net>
