@@ -13,6 +13,7 @@ config.status
 config.sub
 configure
 configure.scan
+gnome-doc-utils.make
 intl
 libtool
 ltconfig
