@@ -1,2 +1,3 @@
 Makefile.in
 Makefile
+*.omf
