@@ -1,14 +1,0 @@
-<?xml version="1.0" standalone="no"?>
-<omf>
-  <resource>
-    <title>
-      Control Center Manual
-    </title>
-    <subject>
-      <category>GNOME|Utilities</category>
-    </subject>
-    <format mime="text/html" />
-    <identifier url="index.html" />
-    <language code="C" />
-  </resource>
-</omf>
