@@ -1,0 +1,9 @@
+<?xml version="1.0" standalone="no"?>
+<omf>
+  <resource>
+    <subject category="GNOME|Utilities"/>
+    <type>user's guide</type>	
+    <relation seriesid="e9bfb3ba-fe90-11d9-9eb2-8beabbd95e64"/>
+    <rights type="GNU FDL" license.version="1.1" holder="Ximian, Inc."/>
+  </resource>
+</omf>
