@@ -1,3 +1,12 @@
+2005-07-27  Sebastien Bacher  <seb128@debian.org>
+
+	* .cvsignore:
+	* C/Makefile.am:
+	* C/control-center-C.omf:
+	* Makefile.am:
+	* control-center.omf.in:
+	switch to gnome-doc-utils.
+
 2005-07-20  Rodrigo Moya <rodrigo@novell.com>
 
 	* C/config-screensaver.xml: specify the fact that it works with both
