@@ -1,5 +1,15 @@
 2005-07-27  Sebastien Bacher  <seb128@debian.org>
 
+	* .cvsignore:
+	* Makefile.am:
+	* autogen.sh:
+	* configure.in:
+	* m4/.cvsignore:
+	switch to gnome-doc-utils. require automake-1.9 and use "tar-ustar" to
+	fix the make dist.
+
+2005-07-27  Sebastien Bacher  <seb128@debian.org>
+
 	* NEWS:
 	* configure.in: updated for 2.11.90.
 
